--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/AppTheme">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -29,7 +29,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".vista.ListaEstudianteActivity" />
+        <activity android:name=".vista.ListaEstudianteActivity"/>
         <activity android:name=".vista.EstudianteActivity" />
         <activity android:name=".vista.EstudianteDosActivity" />
         <activity android:name=".vista.MenuActivity" />
